Navbar alignment fix, removed fb link

--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@
     .sm-links {
         float: right;
         position: relative !important;
+        padding-top: 14px !important;
     }
 }
 .text_cursive {
